perbaiki tampilan dan struktur form blog di blogForm.ejs

--- a/Percobaan Lala/src/partials/blogForm.ejs
+++ b/Percobaan Lala/src/partials/blogForm.ejs
@@ -23,3 +23,17 @@
      <% } %>"
     required
   />
+  </div>Add commentMore actions
+<div class="mb-3">
+  <label for="description" class="form-label">Description</label>
+  <textarea
+    class="form-control"
+    id="description"
+    rows="3"
+    name="description"
+    required
+  >
+  <% if ( edit ) { %>
+    <%= (blog.description).trim() %>
+   <% } %>
+  </textarea>
