--- a/Percobaan Lala/src/partials/blogForm.ejs
+++ b/Percobaan Lala/src/partials/blogForm.ejs
@@ -1,4 +1,4 @@
-<div class="mb-3">Add commentMore actions
+<div class="mb-3">
   <label for="coverimage" class="form-label">Coverimage for blog</label>
   <input
     class="form-control"
