--- a/Percobaan Lala/src/partials/userDashboard.ejs
+++ b/Percobaan Lala/src/partials/userDashboard.ejs
@@ -23,3 +23,40 @@
     <br>
     <div class="container-fluid d-flex justify-content-evenly flex-wrap">
       <% if (blogs.length != 0) { %> <% blogs.forEach(blog => { %>
+
+      <div
+        class="card mb-3"
+        id="blog-<%= blog._id %>"
+        style="max-width: 540px"
+      >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="data:<%= blog.imageMimeType %>;base64,<%= blog.coverimage.toString('base64') %>"
+              class="card-img-top rounded-start"
+              alt="blog image"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title"><%= blog.title %></h5>
+              <p class="card-text"><%= blog.description %></p>
+              <p class="card-text">
+                <small class="text-muted"
+                  >created at: <%= new
+                  Date(blog.createdAt).toLocaleDateString()%></small
+                >
+              </p>
+              <div class="d-flex gap-3" data-blog="<%= blog._id %>">
+                <button type="button" class="View btn btn-primary">View</button>
+                <button type="button" class="Edit btn btn-secondary">
+                  Edit
+                </button>
+                <button type="button" class="Delete btn btn-danger">
+                  Delete
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
