--- a/Nurul/editBlog.ejs
+++ b/Nurul/editBlog.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,15 +12,20 @@
     />
   </head>
   <body>
-    <h1 style="text-align: center">Create a blog</h1>
+    <h1 style="text-align: center">Edit blog</h1>
     <form
-      action="/user/blogs/createBlog"
+      action="/user/blogs/editBlog"
       method="post"
       enctype="multipart/form-data"
       class="container-lg"
     >
       <%- include('./partials/blogForm') %>
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button type="submit" class="btn btn-primary">Edit</button>
     </form>
+    <script>
+      document.querySelector("form").action += `/${
+        location.href.split("/")[6]
+      }`;
+    </script>
   </body>
 </html>
